/* Noun */ <ghetto fence#10818463>

--- a/en/g/ghetto fence.803542.wikitext
+++ b/en/g/ghetto fence.803542.wikitext
@@ -5,4 +5,4 @@
 
 # A [[barrier]] intended to keep one group (usually against their will) separate from another.
 
-# A intermediary in a territorial dispute among homeless individuals.
+# An intermediary in a territorial dispute among homeless individuals.  In use: "Hobo Jim is using that discarded folding chair as a ghetto fence to stop the Pigeon lady from taking his cardboard box."
