--- a/en/g/ghetto fence.803542.wikitext
+++ b/en/g/ghetto fence.803542.wikitext
@@ -3,9 +3,7 @@
 ===Noun===
 {{en-noun|sg=[[ghetto]] [[fence]]}}
 
-# A crudely constructed [[barrier]] intended to keep one group (usually against their will) separate from another.
-
-# An intermediary in a territorial dispute among homeless individuals.  In use: "Hobo Jim is using that discarded folding chair as a ghetto fence to stop the Pigeon lady from taking his cardboard box."
+# A [[barrier]] intended to keep one group (usually against their will) separate from another.
 
 ===Verb===
 {{en-verb|sg=[[ghetto]] [[fence]]}}
