--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -28,6 +28,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * French: {{t+|fr|multiplication|f}}
 * German: {{t+|de|Multiplikation|f}}
 * Greek: {{t+|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
+* Hungarian: {{t|hu|szorzás}}
 * Italian: {{t+|it|moltiplicazione|f}}
 {{trans-mid}}
 * Japanese: [[掛け算]] (かけざん, kakezan), [[乗法]] (じょうほう, jōhō)
@@ -47,6 +48,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * Dutch: {{t|nl|vermenigvuldiging|f}}
 * Greek: {{t+|el|πολλαπλασιασμός|m|tr=pollaplasiasmós}}
 {{trans-mid}}
+* Hungarian: {{t|hu|szorzás}}
 * Romanian: {{t|ro|înmulțire|f}}, {{t|ro|multiplicare|f}}
 * Swedish: {{t+|sv|multiplikation|c}}
 {{trans-bottom}}
