t+hu:[[kivonás]] t-balance ([[WT:EDIT|Assisted]]) <subtraction#10820493>

--- a/en/s/subtraction.26255.wikitext
+++ b/en/s/subtraction.26255.wikitext
@@ -22,10 +22,11 @@
 * Finnish: {{t-|fi|vähentäminen}}
 * French: {{t+|fr|soustraction|f}}
 * Greek: {{t+|el|αφαίρεση|f}}
+* Hungarian: {{t|hu|kivonás}}
 * Italian: {{t-|it|sottrazione|f}}
 * Japanese: [[引き算]] (ひきざん, hikizan)
-* Persian: {{t-|fa|تفریق|xs=Persian}}
 {{trans-mid}}
+* Persian: {{t-|fa|تفریق|xs=Persian}}
 * Polish: {{t+|pl|odejmowanie|n}}
 * Portuguese: {{t+|pt|subtração|f}}
 * Romanian: [[scădere]] {{f}}
@@ -38,8 +39,9 @@
 
 {{trans-top|calculation}}
 * Dutch: {{t+|nl|aftrekking|f}}
-* Italian: {{t-|it|sottrazione|f}}
+* Hungarian: {{t|hu|kivonás}}
 {{trans-mid}}
+* Italian: {{t-|it|sottrazione|f}}
 * [[Telugu]]: [[తీసివేత]] (teesiveata)
 {{trans-bottom}}
 
