iwiki +[[:el:souple]] <souple#10820700>

--- a/en/s/souple.856101.wikitext
+++ b/en/s/souple.856101.wikitext
@@ -39,9 +39,9 @@ From {{etyl|la|fr}} ''[[supplex]]''.
 ====Descendants====
 * English: [[supple]]
 
-
 [[ar:souple]]
 [[de:souple]]
+[[el:souple]]
 [[fr:souple]]
 [[io:souple]]
 [[id:souple]]
