--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -247,6 +247,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 [[kn:bound]]
 [[ku:bound]]
 [[hu:bound]]
+[[mg:bound]]
 [[ml:bound]]
 [[my:bound]]
 [[nl:bound]]
