--- a/en/a/assassinated.720062.wikitext
+++ b/en/a/assassinated.720062.wikitext
@@ -6,6 +6,7 @@
 # {{past of|[[assassinate]]}}
 
 [[fr:assassinated]]
+[[mg:assassinated]]
 [[ml:assassinated]]
 [[simple:assassinated]]
 [[sv:assassinated]]
