--- a/en/l/luffed.746853.wikitext
+++ b/en/l/luffed.746853.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Verb===
@@ -11,4 +10,5 @@
 * [[duffel#English|duffel]]
 * [[duffle#English|duffle]]
 
+[[mg:luffed]]
 [[vi:luffed]]
