--- a/en/m/missent.801182.wikitext
+++ b/en/m/missent.801182.wikitext
@@ -15,6 +15,7 @@
 # {{form of|[[third-person|Third-person]] [[plural]] [[imperfect subjunctive]]|mettre|lang=French}}
 
 [[fr:missent]]
+[[mg:missent]]
 [[sv:missent]]
 [[ta:missent]]
 [[zh:missent]]
