--- a/en/r/ricked.746932.wikitext
+++ b/en/r/ricked.746932.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Verb===
@@ -11,4 +10,5 @@
 * [[Derick#English|Derick]]
 * [[dicker#English|dicker]]
 
+[[mg:ricked]]
 [[vi:ricked]]
