/* Derived terms */ <mill#10853147>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -23,17 +23,21 @@
 * {{sense|plant, building}} [[factory]], [[works]]
 
 =====Derived terms=====
+{{der-top}}
 * [[all grist to one’s mill]]
 * [[miller]]
 * [[millhouse]]
 * [[milling]]
 * [[millstone]]
 * [[paper mill]]
+{{der-mid}}
+* [[pulp mill]]
 * [[run-of-the-mill]]
 * [[rumor mill]], [[rumour mill]]
 * [[steel mill]]
 * [[trouble at t' mill]]
 * [[windmill]]
+{{der-bottom}}
 
 =====Translations=====
 {{trans-top|grinding apparatus}}
