--- a/en/-/-ica.801322.wikitext
+++ b/en/-/-ica.801322.wikitext
@@ -1,3 +1,25 @@
+==English==
+===Etymology===
+{{etyl|la}} {{term|-ica||(plural suffix)|lang=la}}.
+
+===Suffix===
+{{infl|en|suffix|cat=suffixes|sort=ica}}
+
+# a [[collection]] of things that relate to a specific place, person, theme, etc.
+
+====Usage notes====
+Not productive, and rarely used; {{term|-ana}} and {{term|-ia}} are more common.
+
+====Synonyms====
+* [[-ana]], [[-iana]]
+* [[-ia]]
+
+====Derived terms====
+* [[erotica]]
+* [[Judaica]]
+
+----
+
 ==Catalan==
 
 ===Suffix===
