--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -19,7 +19,7 @@
 # A contiguous [[area]] of [[land]], smaller than a [[continent]], totally [[surround]]ed by [[water]].
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: ''an '''island''' of tranquility'' (a calm place surrounded by a noisy environment)
-# A [[superstructure]] on a large ship’s [[deck]]
+# A [[superstructure]] on an aircraft carrier's [[deck]]
 
 ====Synonyms====
 * {{italbrac-colon|an entity surrounded by other very different entities}} [[oasis]]
