/* Adverb */ + usex with a different slant to it] <then#10864854>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -23,6 +23,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 #: ''There are three green ones, '''then''' a blue one.''
 # {{context|conjunctive}} in that case.
 #: ''If it’s locked, '''then''' we’ll need the key.''
+#: ''You don't like potatoes? What do you want me to cook, '''then'''?''
 # {{context|sequence}} at the same time; on the other hand.
 #: ''That’s a nice shirt, but '''then''', so is the other one.''
 # {{obsolete}} At the time that; [[when]].
