t+sv:[[bråkdel]] t+sv:[[bråk]] ([[WT:EDIT|Assisted]]) <fraction#10871603>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -60,6 +60,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Russian: {{t+|ru|часть|f}}
 * [[Scottish Gaelic]]: {{t-|gd|bìdeag|f|xs=Scottish Gaelic}},{{t-|gd|criomag|f|xs=Scottish Gaelic}},{{t-|gd|mìr|m|xs=Scottish Gaelic}}
 * Spanish: [[fracción]], {{f}}
+* Swedish: {{t|sv|bråkdel|c}}
 {{trans-bottom}}
 
 {{trans-top|arithmetic: ratio of integers}}
@@ -86,6 +87,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * [[Scottish Gaelic]]: {{t|gd|bloigh|f}}
 * Slovene: {{t+|sl|ulomek|m}}
 * Spanish: [[fracción]], {{f}}, [[quebrado]] {{m}}
+* Swedish: {{t|sv|bråk|n}}
 * [[Tajik]]: {{t|tg|каср|sc=Cyrl|xs=Tajik}}
 {{trans-bottom}}
 
