--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -1,92 +1,1 @@
-==English==
-
-===Pronunciation===
-* {{audio|en-us-consumption.ogg|Audio (US)}}
-
-===Noun===
-{{en-noun|-}}
-
-# The act of [[consume|consuming]] something.
-#: ''The fire's '''consumption''' of the forest caused ecological changes.''
-# The amount [[consume|consumed]].
-#: ''gross national '''consumption'''''
-# {{pathology}} The [[waste away|wasting-away]] of the human body through [[disease]].
-# {{pathology|dated}} [[pulmonary tuberculosis|Pulmonary tuberculosis]].
-
-====Derived terms====
-* [[conspicuous consumption]]
-
-====Related terms====
-* [[consumer]]
-
-====Translations====
-{{trans-top|the act of consuming something}}
-* Bulgarian: {{t+|bg|консумиране|f}}, {{t+|bg|изразходване|n}}
-* [[Catalan]]: [[consum]] {{m}}
-* Czech: {{t-|cs|spotřeba|f}}, {{t-|cs|zničení|n}}
-* Dutch: {{t+|nl|consumptie|f}}, {{t+|nl|verbruik|n}}
-* Finnish: [[kuluttaminen]], [[kulutus]]
-* French: {{t+|fr|consommation}}, {{t+|fr|consommer|m}}, {{t+|fr|consumer|m}}
-* German: {{t+|de|Konsum|m}}, {{t-|de|Verzehr|m}}
-{{trans-mid}}
-* Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
-* Hungarian: {{t+|hu|fogyasztás}}
-* Japanese: [[消費]] (しょうひ, shōhi)
-* Portuguese: {{t+|pt|consumo|m}}
-* Russian: {{t+|ru|потребление|n|tr=potreblénije}}
-* [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
-* Spanish: {{t-|es|consumir}}
-{{trans-bottom}}
-
-{{trans-top|the amount consumed}}
-* Bulgarian: {{t+|bg|консумация|f}}
-* [[Catalan]]: [[consum]] {{m}}
-* Czech: {{t-|cs|spotřeba|f}}
-* Dutch: [[consumptie]] {{f}}, [[verbruik]] {{n}}
-* Finnish: {{t-|fi|kulutus}}
-{{trans-mid}}
-* French: {{t+|fr|consommation|f}}
-* German: [[Verbrauch]] {{m}}, [[Verbrauchswert]] {{m}}, [[Verzehr]] {{m}}
-* Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
-* [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
-* Spanish: {{t+|es|consumo}}
-{{trans-bottom}}
-
-{{trans-top|wasting-away of the human body through disease}}
-* Dutch: [[wegteren]] {{n}}
-* Finnish: {{t|fi|riutuminen}}
-{{trans-mid}}
-* Russian: {{t|ru|истощение|n|tr=istoščénije}}
-* [[Scottish Gaelic]]: {{t-|gd|caitheamh|f|xs=Scottish Gaelic}}
-{{trans-bottom}}
-
-{{trans-see|pulmonary tuberculosis}}
-
-{{checktrans-top}}
-* {{ttbc|German}}: [[Schwindsucht]] {{f}}
-{{trans-mid}}
-* {{ttbc|Turkish}}: [[yoğaltım]]
-{{trans-bottom}}
-
-[[ar:consumption]]
-[[et:consumption]]
-[[el:consumption]]
-[[fr:consumption]]
-[[ko:consumption]]
-[[io:consumption]]
-[[id:consumption]]
-[[it:consumption]]
-[[kn:consumption]]
-[[lo:consumption]]
-[[hu:consumption]]
-[[ml:consumption]]
-[[my:consumption]]
-[[ja:consumption]]
-[[pl:consumption]]
-[[ru:consumption]]
-[[simple:consumption]]
-[[fi:consumption]]
-[[ta:consumption]]
-[[te:consumption]]
-[[vi:consumption]]
-[[zh:consumption]]
+hey girls wats up
