--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -159,6 +159,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
 {{trans-mid}}
+* Italian: {{t|it|teoria|f}}
 * Japanese: {{t-|ja|定理|tr=teiri}}, {{t+|ja|理論|tr=riron}}, {{t|ja|学説|tr=gakusetsu}}
 * [[Macedonian]]: {{t-|mk|теорија|f|tr=teórija}}
 * Norwegian: {{t-|no|teori|m}}
