--- a/en/e/emulating.746830.wikitext
+++ b/en/e/emulating.746830.wikitext
@@ -1,4 +1,3 @@
-
 ==English==
 
 ===Verb===
@@ -10,5 +9,5 @@
 * {{alphagram|aegilmntu}}
 * [[glutamine#English|glutamine]]
 
-
 [[fr:emulating]]
+[[oc:emulating]]
