t+it:[[asta]] ([[WT:EDIT|Assisted]]) <staff#10886096>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -48,7 +48,7 @@
 {{trans-mid}}
 * [[Ido]]: [[bastono]]
 * Indonesian: [[toya]]
-* Italian: {{t+|it|bastone|m}}
+* Italian: {{t+|it|bastone|m}}, {{t|it|asta|f}}
 * [[Macedonian]]: {{t-|mk|стап|m|tr=stap}}
 * Polish: {{t+|pl|laska|f}},  {{t+|pl|kij|m}}
 * Portuguese: {{t+|pt|bengala|f}}
