--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -1,5 +1,10 @@
 {{also|genêt}}
 ==English==
+===Etymology===
+From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenette}} et al., of uncertain origin.
+
+===Pronunciation===
+*{{a|UK}} {{IPA|/ˈdʒɛnɪt/}}
 
 ===Noun===
 {{en-noun}}
@@ -9,6 +14,8 @@
 ===Anagrams===
 * {{alphagram|eegnt}}
 * [[tenge#English|tenge]]
+
+[[Category:Mammals]]
 
 [[ca:genet]]
 [[de:genet]]
