--- a/en/r/rudesby.774528.wikitext
+++ b/en/r/rudesby.774528.wikitext
@@ -7,7 +7,7 @@
 {{en-noun}} 
 
 # {{archaic}} A [[rude]] person
-#:''There is no way in hell my sons will grew up to become '''rudesbys''' like you, Sir, said Mr. Right while he rudely spanked Ricky and Rudy on the bare for writing the replies the '''rudesby''' complained about in equally rude terms as his original letters
+#* {{quote-book|year=1601|title=[[w:Twelfth Night|Twelfth Night]]|author=[[w:William Shakespeare|William Shakespeare]]|section=Act IV, scene I|passage=Will it be ever thus? Ungracious wretch, / Fit for the mountains and the barbarous caves, / Where manners ne'er were preach'd! out of my sight! / Be not offended, dear Cesario. / '''Rudesby''', be gone!}}
 
 ====Related terms====
 * [[rudely]]
