--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -61,7 +61,7 @@
 * French: {{t+|fr|monsieur|m}}
 {{trans-mid}}
 * German: [[Herr]] {{m}}, [[mein Herr]] {{m}} (''my lord'')
-* Hindi: {{t|hi|श्रीमान|m|tr=śrīmān|xs=Hindi}}
+* Hindi: {{t|hi|श्रीमान|m|tr=śrīmān|xs=Hindi}}, {{t|hi|श्री|tr=śrī|sc=Deva}}, {{t|hi|सर|m|tr=sar|sc=Deva}}
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}
 * Korean: {{t+|ko|선생님|tr=seonsaengnim|sc=Hang}}, {{t|ko|씨|tr=ssi|sc=Kore}}
 * Kurdish: {{ku-Arab|[[کاک]]}}
