--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -63,11 +63,11 @@
 {{trans-mid}}
 * Hindi: {{t|hi|श्रीमान|m|tr=śrīmān|xs=Hindi}}, {{t|hi|श्री|tr=śrī|sc=Deva}}, {{t|hi|सर|m|tr=sar|sc=Deva}}, {{t|hi|साहिब|m|tr=sāhib|sc=Deva}}
 * Japanese: {{t|ja|だんな|tr=danna}}, {{t|ja|サー|tr=sā}} {{qualifier|in translations from English}}
-* Korean: {{t+|ko|선생님|tr=seonsaengnim|sc=Hang}}, {{t|ko|씨|tr=ssi|sc=Kore}}
+* Korean: {{t+|ko|선생님|tr=seonsaengnim|sc=Hang}}, {{t|ko|씨|tr=-ssi|alt=-씨|sc=Kore}}
 * Kurdish: {{ku-Arab|[[کاک]]}}
 * [[Macedonian]]: {{t-|mk|господин|m|tr=góspodin}}, {{t-|mk|господине|m|tr=gospódine}} ([[vocative case]])
 * Polish: [[pan]] {{m}}, [[panie]] {{m}} ([[vocative case]])
-* Russian: {{qualifier|obsolete}} {{t+|ru|сударь|m|tr=súdarʹ}}, {{t+|ru|господин|m|tr=gospodín}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}
+* Russian: {{qualifier|obsolete}} {{t+|ru|сударь|m|tr=súdar’}}, {{t+|ru|господин|m|tr=gospodín}}, {{t+|ru|сэр|m|tr=ser}} {{qualifier|in translations from English}}
 * Turkish: {{t|tr|beyefendi}}
 * Ukrainian: {{t-|uk|пан|m|tr=pan|xs=Ukrainian}}
 * Urdu: {{t|ur|صاحب|m|tr=sāhib|sc=ur-Arab}}
