t+it:[[consumare]] ([[WT:EDIT|Assisted]]) <consume#10904478>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -80,6 +80,7 @@ From {{etyl|la}} ''[[consumere]]''.
 {{trans-mid}}
 * French: {{t+|fr|consumer}}
 * Hungarian: {{t+|hu|elpusztít}}
+* Italian: {{t|it|consumare}}
 {{trans-bottom}}
 
 {{checktrans}}
