--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -8,8 +8,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 ===Pronunciation===
 * {{audio|en-us-bamboo.ogg|Audio (US)}}
 
-===Noun===
-{{en-noun}}
+im the best
 
 # A [[plant]]; a [[grass]] of the [[Poaceae]] family, characterised by its woody, hollow, round, straight, jointed stem.
 # The wood of the bamboo plant as a material or [[cane]].
