--- a/en/b/blown.6805.wikitext
+++ b/en/b/blown.6805.wikitext
@@ -1,4 +1,8 @@
-==English==
+==English== 
+
+==uitleg==
+Blown is heel simpel. Je neemt een waterpijp. je trekt een keer heel goed en dan blaas je de rook uit in iemand anders mond.
+Blown is ook iemand pijpen en dan de sperma in je mond krijgen.
 
 ===Etymology===
 {{etyl|enm}} [[blawen]], from {{etyl|ang}} [[blaƿan|bláƿan]] (bláwan), past participle of [[blaƿen|bláƿen]] (bláwen).
