--- a/en/i/in the know.742284.wikitext
+++ b/en/i/in the know.742284.wikitext
@@ -28,6 +28,7 @@
 * Estonian: {{t|et|teadlik}}
 * Finnish: {{t-|fi|tietävä}}
 * French: {{t+|fr|au courant}}
+* {{trreq|German}}
 * {{trreq|Hindi}}
 {{trans-mid}}
 * Hungarian: {{t|hu|tájékozott}}, {{t|hu|beavatott}}, {{t|hu|jól értesült}}
