--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -2,8 +2,6 @@
 {{also|át|Appendix:Variations of "at"}}
 ==English==
 
-{{rank|you|not|be|20|at|by|on|her}}
-
 ===Etymology===
 From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt||at, near, by, toward|sc=unicode|lang=ang}}, from {{proto|Germanic|ata|at, near, to|lang=en}}, from {{proto|Indo-European|ad|to, near, by}}. Cognate with {{fo}} {{term|at||at, to, toward|lang=fo}}, {{no}} {{term|åt||to|lang=no}}, {{sv}} {{term|åt||for, toward|lang=sv}}, {{is}} {{term|að||to, towards|lang=is}}.
 
@@ -170,6 +168,9 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 {{en-noun}}
 
 # the [[@]] symbol.
+
+===Statistics===
+{{rank|you|not|be|20|at|by|on|her}}
 
 ===Anagrams===
 * {{alphagram|at}}
