moving en {{rank}} <break#10929022>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -1,8 +1,6 @@
 {{wikipedia}}
 ==English==
 
-{{rank|authority|pleasant|forget|862|break|Roman|wise|watch}}
-
 ===Etymology===
 {{etyl|ang}} {{term|brecan|lang=ang}}. Compare Dutch {{term|breken|lang=nl}}, German {{term|brechen|lang=de}}, Gothic {{term|𐌱𐍂𐌹𐌺𐌰𐌽|sc=Goth|tr=brikan|lang=got}}, and French {{term|broyer|lang=fr}}. Cognate with Latin {{term|frangere||to break}}.
 
@@ -653,6 +651,9 @@ The sense relating to a spell of weather is most likely to be used after a perio
 {{trans-top|UK, weather: a change}}
 {{trans-mid}}
 {{trans-bottom}}
+
+===Statistics===
+{{rank|authority|pleasant|forget|862|break|Roman|wise|watch}}
 
 ===Anagrams===
 * {{alphagram|abekr}}
