t+it:[[mediconzolo]] ([[WT:EDIT|Assisted]]) <quack#10930904>

--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -120,6 +120,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 {{trans-bottom}}
 
 {{trans-top|doctor}}
+* Italian: {{t|it|mediconzolo}}
 * Spanish: {{t-|es|curandero|m}}
 {{trans-mid}}
 {{trans-bottom}}
