--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -1,7 +1,5 @@
 ==English==
 
-{{rank|since|use|used|252|began|thy|less|till}}
-
 ===Pronunciation===
 * {{IPA|/bIˈɡæn/}}, {{SAMPA|/bI"g{n/}}
 * {{audio|en-us-began.ogg|Audio (US)}}
@@ -20,6 +18,9 @@
 
 ====Translations====
 * Dutch: [[begon]]-->
+
+===Statistics===
+{{rank|since|use|used|252|began|thy|less|till}}
 
 ===Anagrams===
 * {{alphagram|abegn}}
