--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -2,8 +2,6 @@
 {{also|Thing}}
 ==English==
 
-{{rank|got|let|world|194|thing|set|told|both}}
-
 ===Etymology===
 From {{etyl|enm}}, from {{etyl|ang}} {{term|þing|lang=ang}}.
 
@@ -220,6 +218,9 @@ Originally meaning an assembly, that handled political and court issues. Later a
 ====External links====
 * {{R:Webster 1913}}
 * {{R:Century 1911}}
+
+===Statistics===
+{{rank|got|let|world|194|thing|set|told|both}}
 
 ===Anagrams===
 * {{alphagram|ghint}}
