--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -1,7 +1,5 @@
 ==English==
 
-{{rank|also|away|against|148|though|get|eyes|hand}}
-
 ===Etymology===
 {{etyl|enm}} {{term|thagh|thagh, thaugh||lang=enm}} from {{etyl|ang|en}} {{term|þeah|þēah|lang=ang}}, later superceded in many dialects by {{etyl|enm}} {{term|though|thogh, though||lang=enm}} from {{etyl|non}} *{{term||þóh}} (later {{term|þó}}), both from {{proto|Germanic|þauh|though}} from {{proto|Indo-European|to-||lang=en}}. Akin to {{etyl|ofs|-}} {{term|þah|þāh||lang=ofs}} "though", {{etyl|osx|-}} {{term|þoh|þōh||lang=osx}} "though" ({{nl}} {{term|doch|doch||lang=nl}}), {{etyl|goh|-}} {{term|doh|dōh||lang=goh}} "though, but, yet, nevertheless" ({{de}} ''[[doch#German|doch]]''). More at [[that]].
 
@@ -84,6 +82,9 @@
 * Slovak: {{t|sk|hoci}}
 * Spanish: {{t-|es|sin embargo}}, {{t-|es|a pesar de}}
 {{trans-bottom}}
+
+===Statistics===
+{{rank|also|away|against|148|though|get|eyes|hand}}
 
 [[Category:English conjunctive adverbs]]
 [[Category:English degree adverbs]]
