--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -50,7 +50,7 @@ Literally "beyond the river [[Dniester]]".
 * Lithuanian: {{t+|lt|Padniestrė|xs=Lithuanian}}
 * [[Macedonian]]: {{t|mk|Придњестровие|n|tr=Pridnjestróvie}}
 * [[Moldavian]]: {{t|mo|Транснистриа|f|tr=Transnistria|sc=Cyrl|xs=Moldavian}}
-* Norwegian: {{t-|no|Transnistria}}
+* Norwegian: {{t-|no|Transnistria|n}}
 * [[Occitan]]: {{t-|oc|Transnístria|f|xs=Occitan}}
 * [[Piedmontese]]: {{tø|pms|Transnistria|f|xs=Piemontese}}
 * Polish: {{t+|pl|Naddniestrze|n}}
