/* Proper noun */ <Transnistria#10937088>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -147,7 +147,7 @@ Literally "beyond the river [[Dniester]]".
 {{wikipedia|lang=no}}
 
 ===Proper noun===
-{{infl|no|proper noun|g=g}}
+{{infl|no|proper noun|g=n}}
 
 # [[#English|Transnistria]]
 
