/* Romanian */  Nistru (''river'') <Transnistria#10937130>

--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -184,6 +184,8 @@ Literally "beyond the river [[Dniester]]".
 ====Derived terms====
 * {{l|ro|transnistrian}}
 
+====Related terms====
+* [[Nistru]] (''river'')
 [[Category:ro:Place names]]
 
 ----
