--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -12,6 +12,7 @@ From {{etyl|xno}} {{term|genette}}, {{etyl|frm}} {{term|genette}}, {{term|jenett
 {{wp}}
 
 # Any of several [[Old World]] [[nocturnal]], [[carnivorous]] [[mammal]]s, of the family ''[[Viverridae]]'', that have a spotted coat and a long, ringed tail
+# A group of [[genetic]]ally identical individuals ([[plant]]s, [[fungi]], [[bacteria]] etc.) that have grown in a given location, all originating from [[asexual reproduction]] of a single ancestor.
 
 ===Anagrams===
 * {{alphagram|eegnt}}
