--- a/en/i/indorse.742110.wikitext
+++ b/en/i/indorse.742110.wikitext
@@ -1,9 +1,14 @@
 ==English==
+===Etymology===
+Alteration influenced by {{etyl|ML.|en}} {{term|indorso|indorsare|lang=la}} of {{etyl|enm|en}} {{term|endosse|lang=enm}}, from {{etyl|fro}} {{term|endosser||to put on back|lang=fro}}, from {{etyl|la|en}} {{term|dossum|lang=la}}, alt form of {{term|dorsum||lang=la|back}}.<ref>{{R:Online Etymology Dictionary}}</ref> That is, the ‘r’ was dropped in Latin ''dossum,'' which developed into Old French and then Middle English ''endosse,'' and then the ‘r’ was re-introduced into English via the Medieval Latin ''indorsare,'' which had retained the ‘r’; at the same time the ‘e’ (French) was changed to ‘i’ (Latin). Note that the alternative form {{term|endorse|lang=en}} is now more common, retaining the restored ‘r’ but reverting to the initial ‘e’, rather than the Latinate ‘i’.
 
 ===Verb===
 {{en-verb|indors|ing}}
 
-# {{British|India|rare}} To [[endorse]]
+# {{British|India|rare}} {{alternative form of|endorse}}
+
+====Derived terms====
+* [[indorsement]]
 
 ===Anagrams===
 * {{alphagram|deinors}}
