--- a/en/p/papal infallibility.746569.wikitext
+++ b/en/p/papal infallibility.746569.wikitext
@@ -5,5 +5,11 @@
 
 # {{Roman Catholicism}}  The concept that the [[Pope]], under certain circumstance (when making a statement on faith or morals, etc.) is protected by the [[Holy Spirit]] from being able to make a mistake.
 
+====Translations====
+{{trans-top|Catholic concept of an infallible Pope}}
+*German: ([[päpstliche]]) [[Unfehlbarkeit]] {{f}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ====See also====
 *{{pedialite}}
