Added new sense of the verb <break#10975019>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -100,6 +100,8 @@
 #*: One morning after the budget had failed to balance Finanzminister von Scholz picked up Der Reichsanzeiger and found he had been '''broken''' to sergeant.
 #* '''2006''', [[w:Peter Collier (political author)|Peter Collier]], ''Medal of Honor: Portraits of Valor Beyond the Call of Duty'', Second Edition, Artisan Books, ISBN 978-1-57965-314-9, [http://books.google.com/books?id=EqH-BJ-k0NsC&pg=PA42&dq=broken page 42]:
 #*: Not long after this event, Clausen became involved in another disciplinary situation and was '''broken''' to private—the only one to win the Medal of Honor in Vietnam.
+# {{programming|transitive}} To cause some [[feature]] of a [[program]] or piece of [[software]] to no longer function properly; to cause a [[regression]].
+#: ''Adding 64-bit support '''broke''' backward compatibility with earlier versions.''
 
 ====Quotations====
 {{seeCites}}
