/* Noun */ +quotes <island#10976504>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -16,8 +16,12 @@
 {{en-noun}}
 
 # A contiguous [[area]] of [[land]], smaller than a [[continent]], totally [[surround]]ed by [[water]].
+#*'''2002''', Gordon L. Rottman, ''World War 2 Pacific island guide''
+#*:Sumatra is the second largest '''island''' in the East Indies and the fourth largest in the world covering 182,859 square miles.
 # An [[entity]] [[surround]]ed by other entities that are very [[different]] from itself.
 #: ''an '''island''' of tranquility'' (a calm place surrounded by a noisy environment)
+#*'''1939''', Deseret News, October 27 1939, ''Roosevelt Reaffirms American Neutrality''
+#*:King Leopold, speaking in fluent English during his six minute broadcast, said Belgium stood side by side with Holland "an '''Island''' of peace in the interests of all"
 # A [[superstructure]] on an aircraft carrier's [[deck]]
 
 ====Synonyms====
