/* Verb */ +quotes, tidy up translations <island#10976518>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -238,9 +238,11 @@
 ===Verb===
 {{en-verb}}
 
-# To make into an island
-# To set, dot (as if) with islands
-# To [[isolate]]
+# {{transitive}} To surround with water; make into an island
+#*'''1933''', Harriet Monroe, Poetry: Volume 42
+#*:We paused at little river cities along the way and walked upon their bushy dikes, and heard tales of overflows in flood seasons, when four feet or more of water '''islanded''' the houses. 
+# {{transitive}} To set, dot (as if) with islands
+# {{transitive}} To [[isolate]]
 #* [[w:A. E. Housman|A. E. Housman]], [[w:A Shropshire Lad|A Shropshire Lad]], XXVII, lines 1-2
 #*: ''High the vanes of [[:en:Shrewsbury|Shrewsbury]] gleam
 #*: '''Islanded''' in Severn stream''.
@@ -249,14 +251,17 @@
 * [[isle]]
 
 ====Translations====
-make into an island
+{{trans-top|make into an island}}
+{{trans-mid}}
+{{trans-bottom}}
 
-set, dot (as if) with islands
+{{trans-top|set, dot (as if) with islands}}
+{{trans-mid}}
+{{trans-bottom}}
 
-isolate:
+{{trans-top|isolate}}
 * Dutch: {{t+|nl|afsluiten}}, {{t+|nl|afzonderen}}, {{t+|nl|isoleren}}
-
-{{checktrans-top}}
+{{trans-mid}}
 {{trans-bottom}}
 
 ===See also===
