/* Usage notes */ <clarty#10990854>

--- a/en/c/clarty.720310.wikitext
+++ b/en/c/clarty.720310.wikitext
@@ -6,4 +6,4 @@
 #[[dirty]], [[messy]], [[sticky]], like [[honey]].
 
 ===Usage notes===
-The word is also in common dialectal use in parts of Northern England.
+The word is also in common dialectal use in parts of Northern England and Scotland
