--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -126,6 +126,7 @@ From {{etyl|enm}} {{term|at||at, toward|lang=enm}}, from {{etyl|ang}} {{term|æt
 * Swedish: {{t+|sv|vid}}
 *: ''At five o’clock'' = klockan fem ''or'' vid fem (''informal'')
 *: ''At midnight'' = vid midnatt
+* [[Volapük]]: {{t|vo|tü}}
 {{trans-bottom}}
 
 {{trans-top|in the direction of}}
