--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -12,7 +12,7 @@ From {{etyl|la}} {{term|species|speciēs|appearance; quality|lang=la}}, from {{t
 ===Noun===
 {{en-noun|species}}
 
-# A group of plants or animals having [[similar]] [[physical qualities]].
+# A group of plants or animals having [[similar]] [[appearance]].
 #: ''This '''species''' of animal is unique to the area.''
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
 #* Darwin, ''On the Origin of '''Species''''':
