t+vo:[[täno]] ([[WT:EDIT|Assisted]]) <then#11005521>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -129,6 +129,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Spanish: {{t+|es|después}}
 * Swedish: {{t+|sv|dessutom}}, {{t+|sv|sen}}, {{t+|sv|sedan}}
 * [[Taos]]: [[yíane]]
+* [[Volapük]]: {{t|vo|täno}}
 {{trans-bottom}}
 
 {{trans-top|in that case}}
