t+id:[[babi]] t+ace:[[bui]] t+vi:[[chi lợn]] ([[WT:EDIT|Assisted]]) <pig#11012007>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -87,6 +87,8 @@
 * Icelandic: {{t+|is|svín|n}}
 * [[Ido]]: [[porko]]
 * [[Ilocano]]: [[baboy]]
+* Indonesian: {{t|id|babi}}
+*: [[Acehnese]]: {{tø|ace|bui}}
 * [[Interlingua]]: [[porco#Interlingua|porco]]
 * Irish: {{t+|ga|muc|f|xs=Irish}}
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}
@@ -141,6 +143,7 @@
 * Urdu: {{ur-Arab|[[خوک]]}}, {{ur-Arab|[[خنزیر]]}} {{g|Urdu}}
 * [[Uyghur]]: {{t|ug|چوشقا|sc=ug-Arab}}
 * [[Veps]]: [[siga#Veps|siga]]
+* Vietnamese: {{t|vi|chi lợn}}
 * Welsh: {{t+|cy|mochyn|m|xs=Welsh}}
 * [[West Frisian]]: [[baarch]] {{c}}
 {{trans-bottom}}
