--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -400,7 +400,7 @@ From {{etyl|otk|tr}} ''at'', from {{proto|Turkic|at||ăt|horse|lang=tr}}.
 
 ===Pronunciation===
 * {{IPA|/ät̪/|lang=tr}}
-* {{audio|Tur-at.ogg|audio}}
+* {{audio|Tur-at.ogg|Audio}}
 
 ===Noun===
 {{tr-noun|ı|lar}}
