--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -117,6 +117,7 @@ c 1630, shortening of [[quacksalver]], from {{etyl|dum|en}} {{term|kwaksalver||l
 * Icelandic: {{t|is|fúskari|m}},  {{t|is|loddari|m}},  {{t-|is|falsari|m}},  {{t|is|svikari|m}}
 * Italian: {{t+|it|ciarlatano|m}}, {{t|it|imbonitore|m}}, {{t|it|pataccaro|m}}
 * Japanese: {{t|ja|ペテン師|tr=peten-shi}}
+* Portuguese: {{t|pt|charlatão|m}}
 * Russian: {{t+|ru|шарлатан|m|tr=šarlatán}}
 * Spanish: {{t+|es|charlatán|m}}
 {{trans-bottom}}
