beginning of attempt to improve this entry per a RFV which should perhaps have been a RFC <break#11018015>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -15,13 +15,11 @@
 
 # {{intransitive}} To [[end up]] in two or more [[piece]]s that can't easily be [[reassemble]]d.
 #: ''If the vase falls to the floor, it might '''break'''.''
-# {{intransitive|transitive|medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
+# {{intransitive|transitive}} Of a [[bone]], to [[crack]] or [[fracture]] due to a [[physical]] [[strain]], such as a [[collision]].
 #: ''Don't slip and '''break''' your leg.''
 #: ''Then his fifth metatarsal '''broke'''.''
-# {{transitive|medicine|ergative}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
-#: ''Don't try to '''break''' his neck.''
-# {{rfv-sense}} {{transitive|medicine|ergative}} Of a bone, to [[fracture]] accidentally.
-#: ''Don't '''break''' your fingers playing basketball.''
+# {{transitive}} To cause (a [[bone]]) to [[crack]] under [[physical]] [[strain]].
+#: ''She '''broke''' his neck.''
 # {{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
 #: ''On the hottest day of the year the refrigerator '''broke'''.''
 # {{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
