--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm}}, from {{etyl|ang}} {{term|brecan|lang=ang}}. Compare its cognates, including the Dutch {{term|breken|lang=nl}}, German {{term|brechen|lang=de}}, Gothic {{term|𐌱𐍂𐌹𐌺𐌰𐌽|sc=Goth|tr=brikan|lang=got}}, and French {{term|broyer|lang=fr}}, as well as the Latin {{term|frangere||to break}}.
+From {{etyl|enm}} {{term|breken|lang=enm}}, from {{etyl|ang}} {{term|brecan||to break|lang=ang}}, from {{proto|Germanic|brikanan|to break|lang=en}}, from {{proto|Indo-European|bhrag'-||bhreg'-|to break|lang=en}}. Cognate with Scots {{term|brek||to break|lang=sco}}, West Frisian {{term|brekke||to break|lang=fy}}, Dutch {{term|breken||to break|lang=nl}}, French {{term|broyer||to crush, grind|lang=fr}}, German {{term|brechen||to break|lang=de}}, Gothic {{term|𐌱𐍂𐌹𐌺𐌰𐌽||sc=Goth|tr=brikan|to break, destroy|lang=got}}, Latin {{term|frango|frangō|break, break up, shatter|pos=verb|lang=la}}, {{etyl|no|-}} {{term|brek||desire, yearning|lang=no}}.
 
 ===Pronunciation===
 * {{enPR|brāk}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
