--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -94,6 +94,8 @@ From {{etyl|enm}} {{term|breken|lang=enm}}, from {{etyl|ang}} {{term|brecan||to 
 #: ''I couldn't hear a thing he was saying, so I '''broke''' the connection and called him back.''
 # {{rfv-sense}}<!-- distinct from "break up" --> {{transitive|US}} To arrange a temporary split (with a romantic partner).
 # {{rfv-sense}} {{intransitive|of an [[emulsion]]}} To [[demulsify]].
+#* {{quote-book|year=2004|title=Encyclopedia of supramolecular chemistry|volume=2|page=1466|author=J. L. Atwood, Jonathan W. Steed|passage=Conversely, as the emulsion '''breaks''' and the system returns to the original state, energy is released.|url=http://books.google.com/books?id=pcQSir2QXbMC}}
+#* {{quote-book|title=Emulsions and emulsion stability|volume=22|author=Johan Sjöblom|page=400|year=2006|url=http://books.google.com/books?id=vcNWGexVc4cC|passage=When the droplets hit a solid wall the emulsion '''breaks''' instantly forming a bitumen on the wall and thus a layer up to 1 cm thick can be sprayed in one operation without requiring drying in between.}}
 
 ====Quotations====
 {{seeCites}}
