--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -14,8 +14,8 @@
 {{wikipedia|weight}}
 {{en-noun}}
 
-# The [[force]] on an object due to the gravitational attraction between it and the Earth.
-# An object used to make something heavier.
+# The [[force]] on an object due to the gravitational attraction between it and the Earth (or whatever astronomical object it is influenced by).
+# An object used to make something [[heavier]].
 # A [[standardized]] block of [[metal]] used in a [[balance]] to measure the [[mass]] of another object.
 # [[importance|Importance]] or [[influence]]
 #* '''1907''' Alonso de Espinosa, Hakluyt Society & Sir Clements Robert Markham, ''The Guanches of Tenerife: the holy image of Our Lady of Candelaria, and the Spanish conquest and settlement,'' Printed for the Hakluyt Society, p116
