--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -7,7 +7,7 @@ From {{suffix|antinomian|ism}}.
 ===Noun===
 {{en-noun|s|-}}
 
-# {{Christianity}} a minority belief that the [[Law]] was completely abrogated by [[Jesus]] so that it has no meaning for the present day [[Christian]] believer; perceived by most Christians as [[heretical]].
+# {{Christianity}} a religious movement which believes that only the 'law of Faith' is essential for salvation; and which is 'against' all other 'laws' being taught as being essential for salvation, and refering to them as legalism.
 # {{Judaism}} opposition to the [[Torah]].
 
 ====Antonyms====
