--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -21,8 +21,8 @@
 # {{math|of a [[Lie group]]}} Having no [[connected]] [[normal]] [[subgroup]].
 
 ====Synonyms====
-* {{sense|consisting of one part or aspect}}: [[onefold]]
-* {{sense|having few parts or features}}: [[plain]]
+* {{sense|consisting of a single part or aspect}} [[onefold]]
+* {{sense|having few parts or features}} [[plain]]
 * See [[WikiSaurus:easy]]
 
 ====Antonyms====
