--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -44,6 +44,7 @@
 * Arabic: {{Arab|[[مطحنة]]}} {{IPAchar|(máʈħana)}} {{f}}
 * Armenian: {{t-|hy|աղաց|tr=aġac'}}, {{t-|hy|ջրաղաց|tr=ǰraġac'}}
 * Bosnian: {{t-|bs|mlin|m}}
+* [[Catalan]]: {{t|ca|molí|m}}
 * Croatian: {{t-|hr|mlin|m}}
 * Czech: {{t+|cs|mlýn|m}}
 * Danish: {{t+|da|mølle}}
@@ -81,6 +82,7 @@
 {{trans-bottom}}
 
 {{trans-top|building housing a grinding apparatus}}
+* [[Catalan]]: {{t|ca|molí|m}}
 * Finnish: {{t+|fi|mylly}}
 * Greek: {{t+|el|μύλος|m|tr=mýlos}}
 {{trans-mid}}
@@ -183,17 +185,19 @@ From the noun ''mill''
 
 =====Translations=====
 {{trans-top|grind or process using a mill or other machine}}
+* [[Catalan]]: {{t|ca|moldre}}
 * Dutch: {{t+|nl|malen}}
 * Finnish: {{t+|fi|jauhaa}}
 * French: {{t+|fr|moudre}}
 * Latvian: {{t|lv|malt}}
 * [[Macedonian]]: {{t|mk|меле|tr=méle}}, {{t|mk|сомелува|tr=soméluva}}, {{t|mk|сомелува|tr=soméluva}}
-* Polish: {{t+|pl|mleć}}
 {{trans-mid}}
+* Polish: {{t+|pl|mleć}}
 * Portuguese: {{t+|pt|moer}}
 * Romanian: {{t-|ro|măcina}}
 * Russian: {{t|ru|молоть|tr=molót'}} {{impf}}, {{t|ru|смолоть|tr=smolót'}} {{pf.}}
 * [[Scottish Gaelic]]: {{t-|gd|meil|xs=Scottish Gaelic}}
+* Spanish: {{t|es|moler}}
 {{trans-bottom}}
 
 {{trans-top|shape, polish, etc, using a machine}}
