--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -55,7 +55,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Spanish: {{t-|es|bambú|m}}
 * [[Tagalog]]: [[kawayan]]
 * Thai: [[ไผ่]] (phai)
-* [[Volapük]]: {{t|vo|bambud}}
+* [[Volapük]]: {{t|vo|bambud}}, {{qualifier|obsolete}} {{t|vo|lerid}}
 {{trans-bottom}}
 
 {{trans-top|wood}}
