t+vo:[[svin]] t-balance ([[WT:EDIT|Assisted]]) <pig#11035650>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -97,8 +97,8 @@
 * Korean: [[돼지]] (dwaeji)
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|Kurdish}}
 * [[Ladin]]: [[porcel]]
-{{trans-mid}}
 * Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
+{{trans-mid}}
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Lithuanian: [[kiaulė]] {{g|Lithuanian}}
 * [[Lower Sorbian]]: [[swinja]] {{f}}
@@ -144,6 +144,7 @@
 * [[Uyghur]]: {{t|ug|چوشقا|sc=ug-Arab}}
 * [[Veps]]: [[siga#Veps|siga]]
 * Vietnamese: {{t|vi|chi lợn}}
+* [[Volapük]]: {{qualifier|male or female}} {{t|vo|svin}}
 * Welsh: {{t+|cy|mochyn|m|xs=Welsh}}
 * [[West Frisian]]: [[baarch]] {{c}}
 {{trans-bottom}}
