--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -144,7 +144,7 @@
 * [[Uyghur]]: {{t|ug|چوشقا|sc=ug-Arab}}
 * [[Veps]]: [[siga#Veps|siga]]
 * Vietnamese: {{t|vi|chi lợn}}
-* [[Volapük]]: {{qualifier|male or female}} {{t|vo|svin}}, {{qualifier|male}} {{t|vo|hisvin}}, {{qualifier|female}} {{t|vo|jisvin}}
+* [[Volapük]]: {{qualifier|male or female}} {{t|vo|svin}}, {{qualifier|male}} {{t|vo|hisvin}}, {{qualifier|female}} {{t|vo|jisvin}}, {{qualifier|male, obsolete}} {{t|vo|omsvin}}
 * Welsh: {{t+|cy|mochyn|m|xs=Welsh}}
 * [[West Frisian]]: [[baarch]] {{c}}
 {{trans-bottom}}
