--- a/en/l/labour union.776196.wikitext
+++ b/en/l/labour union.776196.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun|sg=[[labour]] [[union]]}}
 
-# {{Canada}} {{alternative spelling of|labor union}}
+# {{Canada|British spelling}} {{alternative spelling of|labor union}}
 
 [[fr:labour union]]
 [[ta:labour union]]
