--- a/en/n/nonane.775490.wikitext
+++ b/en/n/nonane.775490.wikitext
@@ -7,6 +7,7 @@
 
 ====Translations====
 {{trans-top|nonane}}
+* German: {{t|de|Nonan|n}}
 * Italian: {{t+|it|nonano|m}}
 * Norwegian: {{t-|no|nonan|n}}
 {{trans-mid}}
