t+hu:[[meghív]] t+hu:[[megparancsol]] t+hu:[[elrendel]] ([[WT:EDIT|Assisted]]) <bid#11076254>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -33,6 +33,7 @@ From {{etyl|ang}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{etyl|
 * Dutch: {{t+|nl|zeggen}}, {{t+|nl|vertellen}}
 {{trans-mid}}
 * Finnish: {{t+|fi|pyytää}}, {{t+|fi|käskeä}}
+* Hungarian: {{t|hu|megparancsol}}, {{t|hu|elrendel}}
 * Russian: {{t+|ru|приказывать}}
 {{trans-bottom}}
 
@@ -41,6 +42,7 @@ From {{etyl|ang}} verb ''[[biddan]]'' ‘ask, demand’. Conflation from {{etyl|
 * Dutch: {{t+|nl|uitnodigen}}
 * Finnish: {{t+|fi|kutsua}}
 {{trans-mid}}
+* Hungarian: {{t|hu|meghív}}
 * Russian: {{t+|ru|приглашать}}
 * Swedish: {{t+|sv|bjuda}},  {{t|sv|bjuda in}}
 {{trans-bottom}}
