t+hu:[[Panchen Láma]] ([[WT:EDIT|Assisted]]) <Panchen Lama#11077124>

--- a/en/p/Panchen Lama.741373.wikitext
+++ b/en/p/Panchen Lama.741373.wikitext
@@ -22,6 +22,7 @@
 * French: {{t|fr|Panchen-lama}}
 * German: {{t|de|Penchen Lama}}
 * Hindi: {{t|hi|पंचेन लामा|xs=Hindi}}
+* Hungarian: {{t|hu|Panchen Láma}}
 * Indonesian: {{t-|id|Panchen Lama|xs=Indonesian}}
 * Italian: {{t-|it|Panchen Lama}}
 * Japanese: {{t|ja|パンチェン・ラマ}}
