t+lv:[[svars]] ([[WT:EDIT|Assisted]]) <weight#11103080>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -62,6 +62,7 @@
 * [[Ido]]: {{t+|io|pezo|xs=Ido}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{qualifier|objects}} {{t-|ja|重さ|tr=omosa}}, {{qualifier|general}} {{t+|ja|重量|tr=jūryō}}, {{qualifier|living things}} {{t|ja|体重|tr=taijū}}
+* Latvian: {{t|lv|svars|m}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
 * Russian: [[вес]] (v'es) {{m}}
@@ -86,6 +87,7 @@
 * Hungarian: {{t+|hu|súly}}
 * Italian: {{t+|it|peso|m}}
 * Japanese: {{t|ja|重り|tr=omori}}
+* Latvian: {{t|lv|svars|m}}
 * Portuguese: {{t+|pt|peso}}
 * Romanian: {{t-|ro|greutate|f}}
 * Russian: {{t+|ru|груз|m|tr=gruz}}
