--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -42,6 +42,7 @@ Used with the definite article {{term|the}}.
 {{trans-bottom}}
 
 [[Category:Place names]]
+[[Category:Peninsulas]]
 
 [[et:Balkans]]
 [[fr:Balkans]]
