--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -29,15 +29,21 @@ Used with the definite article {{term|the}}.
 * Armenian: {{t-|hy|Բալկաններ|tr=Balkanner}}
 * [[Asturian]]: {{t-|ast|Balcanes|m|xs=Asturian}}
 * [[Catalan]]: {{t-|ca|Balcans|m|p}}
+* Chinese:
+*: Mandarin: {{t|zh|巴爾幹半島|sc=Hani}}, {{t|zh|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
 * Croatian: {{t-|hr|Balkan|m}}
 * French: {{t+|fr|Balkans|m}}
 * Hungarian: {{t+|hu|Balkán}}
+* Japanese: {{t|ja|バルカン半島|tr=Barukan hantō|sc=Jpan}}
 {{trans-mid}}
 * [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t-|pt|Balcãs|m|p}}
 * Romanian: {{t-|ro|Balcani|m|p}}, {{t|ro|Peninsula Balcanică|f}}
 * Russian: {{t-|ru|Балканы|m|p|tr=Balkány}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|Балкан|m}}
+*: Roman: {{t|sh|Balkan|m}}
 * Turkish: {{t+|tr|Balkanlar|p}}
 {{trans-bottom}}
 
