--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -32,10 +32,12 @@ Used with the definite article {{term|the}}.
 * Chinese:
 *: Mandarin: {{t|zh|巴爾幹半島|sc=Hani}}, {{t|zh|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
 * Croatian: {{t-|hr|Balkan|m}}
+* Finnish: {{t|fi|Balkan}}
 * French: {{t+|fr|Balkans|m}}
+* German: {{t|de|Balkan|m}}
+{{trans-mid}}
 * Hungarian: {{t+|hu|Balkán}}
 * Japanese: {{t|ja|バルカン半島|tr=Barukan hantō|sc=Jpan}}
-{{trans-mid}}
 * [[Macedonian]]: [[Балкан]] (Bálkan) {{m}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t-|pt|Balcãs|m|p}}
