--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -7,7 +7,8 @@ From {{etyl|es}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 ===Proper noun===
 {{en-proper noun}}
 
-# A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, and [[gambling]].
+# A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, gambling, and adult entertainment.
+
 
 ====Synonyms====
 * [[Vegas]]
