[[Category:English adjectives]] <beef to the hoof#11111029>

--- a/en/b/beef to the hoof.741306.wikitext
+++ b/en/b/beef to the hoof.741306.wikitext
@@ -1,9 +1,11 @@
 ==English==
 
+===Alternative forms===
+* [[beef to the hock]]
+
 ===Adjective===
 '''[[beef]] [[to]] [[the]] [[hoof]]'''
 
-# {{Ireland|idiom|said of a woman}} [[fat]], [[chubby]], particularly with fat legs.
+# {{Ireland|idiomatic|said of a woman}} [[fat]], [[chubby]], particularly with fat legs.
 
-===Alternative forms===
-*[[beef to the hock]]
+[[Category:English adjectives]]
