--- a/en/k/knee-high to a grasshopper.742286.wikitext
+++ b/en/k/knee-high to a grasshopper.742286.wikitext
@@ -8,6 +8,7 @@
 ====Translations====
 {{trans-top|short}}
 * French: {{t|fr|haut comme trois pommes}}
+* German: {{t|de|drei Käse hoch}}
 * Russian: [[метр с кепкой]] /meter high when having cap on/, [[метр в прыжке]] /meter high when jumping/
 {{trans-mid}}
 {{trans-bottom}}
