--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -95,8 +95,8 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * French: {{t+|fr|théorie|f}}
 * German: {{t+|de|Theorie|f}}
 * Greek: {{t+|el|θεωρία|f}}
-{{trans-mid}}
 * Italian: {{t+|it|teoria|f}}
+{{trans-mid}}
 * Japanese: {{t|ja|憶測|tr=okusoku}}, {{t|ja|推測|tr=suisoku}}, {{t+|ja|推論|tr=suiron}}, {{t+|ja|見解|tr=kenkai}}
 * [[Macedonian]]: {{t-|mk|теорија|f|tr=teórija}}
 * Maltese: {{t-|mt|teorija|xs=Maltese}}
@@ -107,6 +107,7 @@ In scientific discourse, the sense “unproven conjecture” is discouraged (wit
 * [[Scottish Gaelic]]: {{t|gd|beachd-smaoin|f}}
 * Spanish: {{t+|es|teoría|f}}
 * Swedish: {{t+|sv|teori|c}}
+* [[Volapük]]: {{t|vo|teor}}
 {{trans-bottom}}
 
 {{trans-top|(uncountable) expectation}}
