--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -61,8 +61,9 @@ From {{etyl|enm}} {{term|benden}} < {{etyl|ang}} {{term|bendan}} to bind or bend
 * German: {{t+|de|beugen}}
 * Hebrew: {{t|he|כופף|tr=koféf}}
 * Hungarian: {{t+|hu|hajlít}}, {{t+|hu|görbít}}
-* Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
+* Icelandic: {{t|is|beygja}}
 {{trans-mid}}
+* Italian: {{t+|it|curvare}}, {{t+|it|piegare}}
 * Japanese: {{t|ja|曲げる|tr=mageru}}
 * Kurdish: {{ku-Arab|[[چه‌ماندن]]}}
 * Latin: {{t-|la|sinuo|alt=sinuō}}
