/* Translations */ dormouse is not only полчок <dormouse#11124886>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -57,7 +57,7 @@ Unknown origin, though came to be associated with French {{term|dormir||to sleep
 * [[Romani]]: [[xurtso]] {{m}}, [[xurtsaika]] {{f}}
 * Romanian: [[şoarece de pădure]]
 * [[Romansch]]: [[durmigliet]]
-* Russian: {{t+|ru|соня-полчок|m|tr=sónja-polčók}}
+* Russian: {{t+|ru|соня|m|tr=sónja}}
 * [[Sami]]: [[hásselsáhpán]]
 * [[Sardinian]]: [[topi de venadroxu]], [[medrona de tzirva]]
 * [[Scottish Gaelic]]: {{t-|gd|dallag|f|xs=Scottish Gaelic}}
