--- a/en/a/annate.745877.wikitext
+++ b/en/a/annate.745877.wikitext
@@ -1,3 +1,13 @@
+==English==
+===Noun===
+{{en-noun}}
+
+# The first year's [[profit]]s of a Catholic [[benefice]], as traditionally paid directly to the [[Pope]].
+#*'''2009''', Hilary Mantel, ''Wolf Hall'', Fourth Estate 2010, p. 342:
+#*:When he brings into the Commons a bill to suspend the payment of '''annates''' to Rome, he suggests a division of the House.
+
+----
+
 ==Italian==
 
 ===Noun===
