/* Noun */ +Wikisaurus <bind#11151494>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -17,6 +17,9 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (compare Wes
 # Any twining or climbing plant or stem, especially a [[hop]] vine; a [[bine]].
 # {{music}} A [[ligature]] or [[tie]] for grouping notes.
 
+====Synonyms====
+* See also [[Wikisaurus:difficult situation]]
+
 ===Verb===
 {{en-verb|binds|binding|bound|'''[[bound]]''' ''or rarely'' '''[[bounden]]'''}}
 
