--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -9,10 +9,11 @@
 {{trans-top|female goat}}
 * Armenian: {{t+|hy|այծ|tr=ayç}}
 * Finnish: {{t+|fi|kuttu}}
-{{trans-mid}}
 * German: {{t+|de|Ziege|f}},  {{t+|de|Geiß|f}}, {{t+|de|Zicke|f}}, {{t-|de|Zibbe|f}}
+{{trans-mid}}
 * [[Macedonian]]: {{t-|mk|коза|f|tr=koza}}
 * [[Old Church Slavonic]]: {{tø|cu|коза|f|tr=koza|sc=Cyrl|xs=Old Church Slavonic}}
+* [[Volapük]]: {{t|vo|jikapar}}
 {{trans-bottom}}
 
 ===Anagrams===
