--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,7 +6,7 @@
 * {{rhymes|æk}}
 
 ===Etymology 1===
-Alteration of earlier {{term|queck|lang=en}}, from {{etyl|enm}} {{term|queken|lang=enm}}, *{{term||quakken|lang=enm}}, from {{etyl|ang}} *{{term||cwecan, *cwaccian|to quack|lang=ang}}, from {{proto|Germanic|kwakōnan|to croak|lang=en}} (cf. East Frisian {{term|kwaakje|lang=frs}}, Dutch {{term|kwakken|lang=nl}}, German {{term|quaken|lang=de}}), from echoic {{proto|Indo-European|kwak}} 'croak' (cf. Hittite {{term|akuwakuwash|lang=hit}} 'frog', Latin {{term|coaxare|lang=la}}, Old Church Slavonic {{term||kvakati}}, Ancient Greek {{term||koax}} 'frog's croaking').
+Alteration of earlier {{term|queck|lang=en}}, from {{etyl|enm}} {{term|queken|lang=enm}},  from {{proto|Germanic|kwakōjanan|to croak|lang=en}} (cf. East Frisian {{term|kwaakje|lang=frs}}, Dutch {{term|kwakken|lang=nl}}, German {{term|quaken|lang=de}}), of imitative orign.
 
 ====Noun====
 {{en-noun}}
