--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,7 +6,7 @@
 * {{rhymes|æk}}
 
 ===Etymology 1===
-Alteration of earlier {{term|queck|lang=en}}, from {{etyl|enm}} {{term|queken|lang=enm}},  from {{proto|Germanic|kwakōjanan|to croak|lang=en}} (cf. East Frisian {{term|kwaakje|lang=frs}}, Dutch {{term|kwakken|lang=nl}}, German {{term|quaken|lang=de}}), of imitative orign.
+Alteration of earlier {{term|queck|lang=en}}, from {{etyl|enm}} {{term|queken|lang=enm}}, *{{term||quakken|lang=enm}}, {{etyl|ang}} *{{term||cwecan, *cwacian|to emit a sound|lang=ang}}, from {{proto|Germanic|kwakanan||kwakōnan|to croak|lang=en}} (cf. East Frisian {{term|kwaakje|lang=frs}}, Dutch {{term|kwakken|lang=nl}}, German {{term|quaken|lang=de}}), of imitative orign.
 
 ====Noun====
 {{en-noun}}
