/* Catalan */ derived <cop#11166377>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -84,11 +84,14 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 ==Catalan==
 
 ===Noun===
-'''cop'''
+{{ca-noun|m}}
 
-# [[hit]]
+# [[hit]], [[blow]], [[strike]]
 
-[[Category:Catalan nouns]]
+====Derived terms====
+* {{l|ca|cop de gràcia}}
+* {{l|ca|cop baix}}
+* {{l|ca|cop d'estat}}
 
 ----
 
