--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -6,7 +6,7 @@
 * {{rhymes|æk}}
 
 ===Etymology 1===
-From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to quack|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{proto|Germanic|kwakanan||kwakōnan|to croak|lang=en}}, of imitative origin. Cognate with {{etyl|frs|-}} {{term|kwaakje||to quack, croak|lang=frs}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
+From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a frog, make a noise like a duck, goose, or quail|lang=enm}}, from {{term|quack|lang=enm}}, {{term|qwacke|lang=enm}}, {{term|quek|lang=enm}}, {{term|queke||quack|pos=interjection and noun|lang=enm}}, also {{term|kek|lang=enm}}, {{term|keke|lang=enm}}, {{term|whec-|lang=enm}}, partly of imitative origin and partly from {{etyl|dum}} {{term|quacken||to croak, quack|lang=dum}}, from {{etyl|odt}} *{{term||kwaken|to croak, quack|lang=odt}}, from {{proto|Germanic|kwakanan||kwakōnan|to croak|lang=en}}, of imitative origin. Cognate with {{etyl|frs|-}} {{term|kwaakje||to quack, croak|lang=frs}}, {{etyl|gml|-}} {{term|quaken||to quack, croak|lang=gml}}, {{etyl|de|-}} {{term|quaken||to quack, croak|lang=de}}, {{etyl|da|-}} {{term|kvække||to croak|lang=da}}, {{etyl|sv|-}} {{term|kväka||to croak, quackle|lang=sv}}, {{etyl|no|-}} {{term|kvekke||to croak|lang=no}}, {{etyl|is|-}} {{term|kvaka||to twitter, chirp|lang=is}}.
 
 ====Noun====
 {{en-noun}}
