--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -63,6 +63,8 @@ From {{etyl|enm}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a fr
 * Spanish: [[decir]] [[cuac]]
 * Turkish: {{t|tr|vaklamak}}
 {{trans-bottom}}
+====References====
+</references>
 
 ===Etymology 2===
 {{wikipedia}}
