--- a/en/t/terrestrial planet.854976.wikitext
+++ b/en/t/terrestrial planet.854976.wikitext
@@ -17,6 +17,10 @@
 * [[super-Earth]]
 * [[sub-Earth]]
 
+====Hypernyms====
+* [[major planet]]
+* [[planet]]
+
 ====Coordinate terms====
 * [[giant planet]]
 ** [[gas giant]]
