--- a/en/y/yeah.4305.wikitext
+++ b/en/y/yeah.4305.wikitext
@@ -86,7 +86,7 @@ From {{etyl|ang}} {{term|gea|ġēa|lang=ang}}, in turn from {{etyl|gem}} *{{term
 {{trans-top|expressing joy}}
 * Finnish: {{t-|fi|jee}}
 {{trans-mid}}
-* Japanese: {{t|ja|やった！}}
+* Japanese: {{t|ja|やった}} (yatta)
 {{trans-bottom}}
 
 ===See also===
