--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -50,7 +50,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|benđanan}} (compare Wes
 * Portuguese: {{t+|pt|conectar}}, {{t+|pt|juntar}}, {{t+|pt|copular}}, {{t+|pt|ligar}}
 * Romanian: [[cuplare]] , [[conectare]] , [[legare]]
 * Russian: {{qualifier|imperfective}} {{t+|ru|вязать|tr=vjazát'}},  {{qualifier|imperfective}} {{t+|ru|связывать|tr=svjázyvat'}},  {{qualifier|perfective}} {{t+|ru|связать|tr=svjazát'}}
-* [[Scottish Gaelic]]: {{t-|gd|cuibhrich|xs=Scottish Gaelic}}, {{t|gd|naisg}}
+* [[Scottish Gaelic]]: {{t-|gd|cuibhrich|xs=Scottish Gaelic}}, {{t|gd|naisg}}, {{qualifier|sheaves}} {{t|gd|sguab}}
 * Spanish: [[atar]] (tie), [[empastar]] (books)
 * Vietnamese: {{t|vi|kết hợp|xs=Vietnamese}},  {{t|vi|liên kết|xs=Vietnamese}},  {{t|vi|nối|xs=Vietnamese}}
 {{trans-bottom}}
