--- a/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
+++ b/en/r/Russian Soviet Federative Socialist Republic.741432.wikitext
@@ -11,7 +11,7 @@
 
 ====Translations====
 {{trans-top| official name for modern day Russia before the collapse of the Soviet Union}}
-* Finnish: [[Venäjän Sosialistinen Federatiivinen Neuvostotasavalta]].
+* Finnish: [[Venäjän Sosialistinen Federatiivinen Neuvostotasavalta]]
 * [[Macedonian]]: {{t|mk|Руска Советска Федеративна Социјалистичка Република|f|tr=Rúska Sóvetska Federatívna Socijalístička Repúblika}}
 {{trans-mid}}
 * Russian: {{t-|ru|Российская Советская Федеративная Социалистическая Республика|f|tr=Rossíjskaja Sovétskaja Federatívnaja Sotsialistíčeskaja Respublika}}
