--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -118,7 +118,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 * Slovene: {{t+|sl|stvar|f}}, {{t-|sl|reč|f}}
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
-* Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}
+* Swedish: {{t+|sv|sak|c}}, {{t+|sv|ting|n}}, {{t|sv|grej|c}}
 * [[Telugu]]: {{t+|te|వస్తువు}} (vastuvu)
 * Thai: {{t-|th|สิ่งของ|tr=sìng kŏng}}, {{t-|th|สิ่ง|tr=sìng}}
 * [[Tupinambá]]: [[mba'e]]
