--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -143,7 +143,7 @@
 * Ukrainian: {{t|uk|кріль|m|tr=kril’|xs=Ukrainian}}, {{t+|uk|кролик|m|tr=krolyk|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[nukl]]
 * Urdu: {{ur-Arab|[[خرگوش#Urdu|خرگوش]]}} (<u>kh</u>argoš) {{m}}
-* [[Volapük]]: [[krolig]]
+* [[Volapük]]: [[krolig]], {{qualifier|male}} {{t|vo|hikrolig}}, {{qualifier|female}} {{t|vo|jikrolig}}, {{qualifier|male or female offspring}} {{t|vo|kroligül}}, {{qualifier|male offspring}} {{t|vo|hikroligül}}, {{qualifier|female offspring, young}} {{t|vo|jikroligül}}
 * Welsh: [[cwningen]]
 * [[West Frisian]]: [[knyn]]
 {{trans-bottom}}
