t+vo:[[kroligapläd]] t-balance ([[WT:EDIT|Assisted]]) <rabbit#11203986>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -152,10 +152,11 @@
 * Czech: {{t-|cs|králík|m}}
 * Finnish: {{t-|fi|kaniturkis}}, {{t+|fi|kani}}
 * Greek: {{t|el|κόνικλος|m|tr=kóniklos}}
-{{trans-mid}}
 * Italian: {{t+|it|lapin|m}}
+{{trans-mid}}
 * [[Scottish Gaelic]]: {{t-|gd|coineanach|m|xs=Scottish Gaelic}}, {{t-|gd|rabaid|m|xs=Scottish Gaelic}}
 * Serbian: {{t|sr|зечевина|f|tr=zečevina|sc=Cyrl}}
+* [[Volapük]]: {{t|vo|kroligapläd}}
 {{trans-bottom}}
 
 {{trans-top|pacesetter}}
