t+gd:[[sgeadaich]] ([[WT:EDIT|Assisted]]) <attend#11212769>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -44,6 +44,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
 {{trans-mid}}
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
+* [[Scottish Gaelic]]: {{t|gd|sgeadaich}}
 * Welsh: [[gweini#Welsh|canolbwyntio ar]] [[ar#Welsh|ar]]
 {{trans-bottom}}
 
