t+ro:[[sparge]] ([[WT:EDIT|Assisted]]) <break#11241983>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -199,7 +199,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * Persian: {{t|fa|خرد کردن|tr=xord kardan|xs=Persian}}, {{t+|fa|شکستن|tr=šekastan|xs=Persian}}
 * Polish: [[złamać się]] (two pieces), [[rozbić się]], [[połamać się]] (more pieces)
 * Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
-* Romanian: a (se) [[frânge]], a (se) [[rupe]]
+* Romanian: a (se) [[frânge]], a (se) [[rupe]], {{t|ro|sparge}}
 * Russian: {{t|ru|разбиваться|tr=razbivát’s’a}} {{impf}}, {{t|ru|разбиться|tr=razbít’s’a}} {{pf.}}
 * [[Scottish Gaelic]]: {{t-|gd|bris|xs=Scottish Gaelic}}
 * Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
