t+vi:[[da thuộc]] ([[WT:EDIT|Assisted]]) <leather#11245563>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -73,7 +73,7 @@
 * Swedish: {{t+|sv|läder|n}} (1)
 * Thai: {{t-|th|หนัง|tr=năng}}
 * Turkish: {{t+|tr|deri}}
-* {{trreq|Vietnamese}}
+* Vietnamese: {{t|vi|da thuộc}}
 {{trans-bottom}}
 
 {{trans-top|piece of leather used for polishing}}
