--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -45,7 +45,7 @@ From {{etyl|enm}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|bage
 * [[Azeri]]: {{t|az|porsuq|xs=Azeri}}
 * [[Basque]]: [[azkonar]]
 * Belarusian: {{t-|be|барсук|m|xs=Belarusian}}
-* [[Breton]]: [[broc’h]] {{g|Breton}}
+* [[Breton]]: [[broc’h]] {{g|br}}
 * Bulgarian: {{t+|bg|язовец|m|tr=jazovec}}
 * [[Catalan]]: [[teixó]] {{m}}
 * [[Chechen]]: [[дIама]]
