--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -46,6 +46,7 @@ Partly imitative, also influenced by {{term|burble}}.
 * Norwegian: {{t|no|bubla|f}}
 * Polish: {{t+|pl|bańka|f}}
 * Portuguese: {{t+|pt|bolha|f}}
+* Romanian: {{t|ro|balon|n}}
 * Russian: {{t|ru|пузырь|m|tr=puzýr'}}
 * Spanish: {{t+|es|burbuja|f}}, {{t-|es|pompa|f}} {{qualifier|soap bubble}}
 * Swedish: {{t+|sv|bubbla|c}}, {{t|sv|såpbubblor}} {{qualifier|soap bubble}}
