--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -11,8 +11,7 @@
 * {{homophones|martin|Martin}} {{qualifier|in some accents}}
 
 ===Etymology===
-{{rfscript|Gothic}}
-From {{etyl|enm}}, from {{etyl|gml}} {{term|marten||marten|lang=gml}}, diminutive of {{term|mart|lang=gml}}, {{term|marte||marten|lang=gml}}, from {{etyl|osx}} *{{term||marþa|marten|lang=osx}}, from {{proto|Germanic|marþuz||marþraz|marten|lang=en}}. Influenced by {{etyl|enm}} {{term|martren||skin or fur of the marten|lang=enm}}, from {{etyl|xno}} {{term|martrine||marten fur|lang=xno}}, from {{term|martre||marten|lang=xno}}, from {{etyl|frk}} *{{term||martar|marten|lang=frk}}, from the same {{etyl|gem}} source. Cognate with {{etyl|goh|-}} {{term|mardar||marten|lang=goh}} ({{etyl|de|-}} {{term|Marder|lang=de}}), {{etyl|ang|-}} {{term|mearþ||marten|lang=ang}}, {{etyl|non|-}} {{term|mǫrðr||marten|lang=non|sc=Latinx}}. Compare also {{etyl|osx|-}} {{term|marþrin||of a marten, made of marten fur|lang=osx}}, {{etyl|ang|-}} {{term|mierþern||made of marten fur|lang=ang}}. Proto-Germanic form of uncertain origin. Perhaps related to {{etyl|got|-}} {{term|||tr=marzus|wedding|lang=got}}, from {{proto|Germanic|marþus|wedding|lang=en}}, from {{proto|Indo-European|mArtus|wedding|lang=en}}. More at {{l|en|marry}}.
+{{etyl|enm}} {{term|martryn|lang=enm}}, from {{etyl|xno}} {{term|martrine|lang=xno}} 'marten fur', from Old Low Franconian *''marþrin'' 'of marten fur' (cf. Middle Dutch {{term|martren|lang=dum}}), from *''marþra'' 'marten' (compare Dutch {{term|marter|lang=nl}}), from {{proto|Germanic|marþuz}} (compare Low German {{term||Mort}}, West Frisian {{term|murd|lang=fy}} 'polecat', Old English {{term|mearþ|lang=ang}} 'shrew'), originally 'wedding' (cf. Crimean Gothic {{term||marzus}} 'wedding'), from {{proto|Indo-European|martus}} 'bride'. More at [[marry]]. For sense development, compare Italian ''donnola'' 'weasel', from ''donna'' 'lady', Greek ''nyfítsa'' 'weasel', from ''nymfē'' 'bride'.
 
 ===Noun===
 {{en-noun}}
