/* Noun */ defn, quote <break#11283121>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -509,6 +509,16 @@ The sense relating to a spell of weather is most likely to be used after a perio
 #: ''Let’s take a five-minute '''break'''.''
 # A temporary split (with a romantic partner).
 #: ''I think we need a break.''
+# An [[interval]] or [[intermission]] between two parts of a performance, for example a theatre show, broadcast, or sports game.
+#*{{quote-news
+|year=2010
+|date=December 29
+|author=Chris Whyatt  
+|title=Chelsea 1 - 0 Bolton
+|work=BBC
+|url=http://news.bbc.co.uk/sport1/hi/football/eng_prem/9309542.stm
+|page=
+|passage=But they marginally improved after the '''break''' as Didier Drogba hit the post. }}
 # A significant change in circumstance, attitude, perception, or focus of attention: [[big]] [[break]], [[lucky break]].
 # {{British|weather}} a change; the end of a spell of persistent good or bad weather
 # The [[beginning]] (of the morning).
