formatting entries listed in [[Category:French terms needing attention]] <souplesse#11292112>

--- a/en/s/souplesse.856095.wikitext
+++ b/en/s/souplesse.856095.wikitext
@@ -1,15 +1,15 @@
 ==French==
+
 ===Etymology===
-[[souple]] + [[-esse]]
+{{suffix|souple|esse|lang=fr}}
 
 ===Pronunciation===
-* {{audio|Fr-souplesse.ogg|Audio}}
+* {{audio|Fr-souplesse.ogg|Audio (la souplesse)}}
 
 ===Noun===
-'''souplesse''' {{f}}
-# [[suppleness]]
+{{fr-noun|f}}
 
-[[Category:French nouns]]{{attention|fr}}
+# [[suppleness]]
 
 [[el:souplesse]]
 [[fr:souplesse]]
