--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -63,6 +63,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Irish: {{t-|ga|caith|xs=Irish}}
 * Italian: {{t+|it|consumare}}
 * Norwegian: {{t+|no|fortære}}
+* Persian: {{t|fa|مصرف کردن|sc=fa-Arab}}
 * Romanian: {{t-|ro|consuma}}
 {{trans-bottom}}
 
