t+fa:[[تمام وجود کسی را فرا گرفتن]] ([[WT:EDIT|Assisted]]) <consume#11292170>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -72,6 +72,7 @@ From {{etyl|la}} ''[[consumere]]''.
 * Dutch: {{t+|nl|bezighouden}}, {{t-|nl|verteren}}
 {{trans-mid}}
 * Finnish: {{t+|fi|kuluttaa}}, {{t+|fi|kalvaa}}
+* Persian: {{t|fa|تمام وجود کسی را فرا گرفتن|sc=fa-Arab}}
 * Romanian: {{qualifier|intransitive}} {{t|ro|se consuma}}
 {{trans-bottom}}
 
