t+hi:[[सूअर]] t+ur:[[سور]] t+fa:[[خوک]] t+ko:[[돼지]] t+zh:[[豬]] t+zh:[[猪]] t-balance t+ar:[[خنزير]] t+th:[[หมู]] t+he:[[חזיר]] t+ary:[[حلوف]] ([[WT:EDIT|Assisted]]) <pig#11293297>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -44,7 +44,8 @@
 * Albanian: {{t-|sq|derr|m|xs=Albanian}}, {{t-|sq|thi|m|xs=Albanian}}
 * [[Amuzgo]]: [[kítzku]]
 * [[Anglo-Norman]]: {{tø|xno|porc|m}}, {{tø|xno|bacon|m}}
-* Arabic: {{Arab|[[خنزير]]}} (xanzīr) {{m}}
+* Arabic: {{Arab|[[خنزير]]}} (xanzīr) {{m}}, {{t|ar|خنزير|m|tr=khanziir|sc=Arab}}
+*: [[Moroccan Arabic]]: {{tø|ary|حلوف|tr=Haluuf}}
 *: Morocco: {{Arab|[[حلوف]]}} (ħalūf)
 * Aramaic:
 *: Syriac: [[ܚܙܝܪܐ]] (ħzīrā’) {{m}}, [[ܚܙܝܪܬܐ]] (ħzīrtā’) {{f}}
@@ -63,6 +64,7 @@
 * [[Chamorro]]: [[babui]]
 * Cherokee: [[ᏏᏆ]] (siqua)
 * Chinese: [[豬]], [[猪]] (zhū)
+*: Mandarin: {{t|zh|豬|sc=Hani}}, {{t|zh|猪|tr=zhū|sc=Hani}}
 * [[Comox]]: {{tø|coo|kʷašu}}
 * [[Cornish]]: {{t-|kw|hogh|m|xs=Cornish}}, {{t-|kw|mogh|p|xs=Cornish}}
 * Croatian: {{t+|hr|svinja|f}}
@@ -82,7 +84,8 @@
 * German: {{t+|de|Schwein|n}}
 * Greek: {{t+|el|γουρούνι|n|tr=gouroúni}}, {{t+|el|χοίρος|m|tr=choíros}}
 * Hawaiian: {{unicode|[[puaʻa]]}}
-* Hebrew: [[חזיר]] (hazír) {{m}}
+* Hebrew: [[חזיר]] (hazír) {{m}}, {{t|he|חזיר|m|tr=hazír|sc=Hebr}}
+* Hindi: {{t|hi|सूअर|m|tr=sū'ar|sc=Deva}}
 * Hungarian: {{t+|hu|sertés}}, {{t+|hu|disznó}}, {{t+|hu|malac}}
 * Icelandic: {{t+|is|svín|n}}
 * [[Ido]]: [[porko]]
@@ -94,11 +97,11 @@
 * Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}
 * Japanese: {{rfc-tbot}}{{t|ja|豚|tr=[[ぶた]], {{l|ja|buta}}}}
 * [[Karelian]]: [[počči]]
-* Korean: [[돼지]] (dwaeji)
+* Korean: [[돼지]] (dwaeji), {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kurdish: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
 * [[Ladin]]: [[porcel]]
-* Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 {{trans-mid}}
+* Latin: [[sus]] {{c}}, [[porcus]] {{m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f|xs=Latvian}}
 * Lithuanian: [[kiaulė]] {{g|lt}}
 * [[Lower Sorbian]]: [[swinja]] {{f}}
@@ -113,7 +116,7 @@
 * Norwegian: {{t+|no|svin|n}}, {{t+|no|gris|m}}
 * [[Occitan]]: {{t|oc|pòrc|m}}
 * [[Old Church Slavonic]]: {{tø|cu|свиниꙗ|f|tr=svinija|sc=Cyrs}}
-* Persian: {{fa-Arab|[[خوک]]}} (khuk)
+* Persian: {{fa-Arab|[[خوک]]}} (khuk), {{t|fa|خوک|tr=khuk|sc=fa-Arab}}
 * Polish: {{t+|pl|świnia|f}}
 * Portuguese: {{t+|pt|porco|m}}
 * [[Romani]]: [[balo]] {{m}}, [[bali]] {{f}}
@@ -134,13 +137,14 @@
 * [[Tagalog]]: [[baboy]]
 * [[Taos]]: [[kùci’ína]]
 * [[Telugu]]: [[పంది]] (paMdi)
+* Thai: {{t|th|หมู|tr=mŏo|sc=Thai}}
 * [[Tok Pisin]]: [[pik]]
 * [[Tongan]]: {{tø|to|puaka|xs=Tongan}}
 * [[Tswana]]: {{t-|tn|kolobe|xs=Tswana}} (9/10)
 * Turkish: {{t+|tr|domuz}}, {{t|tr|hınzır}}
 * Ukrainian: {{t-|uk|свиня|f|tr=svynja|xs=Ukrainian}}
 * [[Upper Sorbian]]: [[swinjo]] {{n}}
-* Urdu: {{ur-Arab|[[خوک]]}}, {{ur-Arab|[[خنزیر]]}} {{g|ur}}
+* Urdu: {{ur-Arab|[[خوک]]}}, {{ur-Arab|[[خنزیر]]}} {{g|ur}}, {{t|ur|سور|m|tr=sū'ar|sc=ur-Arab}}
 * [[Uyghur]]: {{t|ug|چوشقا|sc=ug-Arab}}
 * [[Veps]]: [[siga#Veps|siga]]
 * Vietnamese: {{t|vi|chi lợn}}
