t+ar:[[استهلاك]] ([[WT:EDIT|Assisted]]) <consumption#11293576>

--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -22,6 +22,7 @@
 
 ====Translations====
 {{trans-top|the act of consuming something}}
+* Arabic: {{t|ar|استهلاك|tr=eestihlek|sc=Arab}}
 * Bulgarian: {{t+|bg|консумиране|f}}, {{t+|bg|изразходване|n}}
 * [[Catalan]]: [[consum]] {{m}}
 * Czech: {{t-|cs|spotřeba|f}}, {{t-|cs|zničení|n}}
