t+la:[[tunc]] t+la:[[tum]] ([[WT:EDIT|Assisted]]) <then#11309886>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -151,6 +151,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Japanese: {{t|ja|そのとき|tr=sonotoki}}, {{t-|ja|だから|tr=dakara}}
 {{trans-mid}}
 * Kurdish: {{t+|ku|pa}}, {{t+|ku|de}}, {{t+|ku|madem}}
+* Latin: {{t|la|tunc}}, {{t|la|tum}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[oleh sebab yang demikian]]
 * Norwegian: {{t+|no|da}}, {{t|no|i så fall}}
