t+sk:[[vec]] t-balance ([[WT:EDIT|Assisted]]) <thing#11310845>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -89,8 +89,8 @@ Originally meaning an assembly, that handled political and court issues. Later a
 * [[Interlingua]]: [[cosa]]
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
 * Italian: {{t+|it|cosa|f}}
-{{trans-mid}}
 * Japanese: {{t|ja|物|tr=[[もの]], mono|sc=Jpan}}, {{t|ja|事|tr=[[こと]], koto|sc=Jpan}}
+{{trans-mid}}
 * Korean: {{t|ko|물건|tr=mulgeon|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t|ku|شت|tr=shit|sc=ku-Arab}}
@@ -115,6 +115,7 @@ Originally meaning an assembly, that handled political and court issues. Later a
 * Serbian:
 *: Cyrillic: [[ствар]] {{f}}
 *: Roman: [[stvar]] {{f}}
+* Slovak: {{t|sk|vec|f}}
 * Slovene: {{t+|sl|stvar|f}}, {{t-|sl|reč|f}}
 * Spanish: {{t+|es|cosa|f}}
 * Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
