--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -69,8 +69,12 @@ From the prefix [[mega-]].
 
 ==Icelandic==
 
+===Pronunciation===
+* {{IPA|/ˈmeiːɣa/|lang=is}}
+*: {{rhymes|eiːɣa|lang=is}}
+
 ===Verb===
-{{is-verb-preterite|má|máttum|mátt}}
+{{is-verb-preterite|má|mátti|mátt}}
 
 # {{context|ambitransitive|governs the accusative}} to be [[allowed]], to be [[permitted]], to [[may]]{{jump|is|be allowed|s}}
 #: ''Þú '''mátt''' þetta ekki.''
