t+no:[[selv om]] ([[WT:EDIT|Assisted]]) <though#11321128>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -76,6 +76,7 @@
 * Italian: [[anche]] [[se]]
 * Japanese: {{t-|ja|だが|tr=daga}}, {{t|ja|だけれども|tr=dakeredomo}}, {{t|ja|だけど|tr=dakeredo}}{{qualifier|colloquial}}
 * Navajo: {{tø|nv|ndi}}
+* Norwegian: {{t|no|selv om}}
 * Polish: {{t|pl|choć}}, {{t+|pl|chociaż}}
 * Portuguese: {{t|pt|apesar}} de
 * Romanian: {{t-|ro|desi}}, de {{t+|ro|parca}}
