t+et:[[põrsakest]] ([[WT:EDIT|Assisted]]) <pig#11328053>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -72,7 +72,7 @@
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
 * [[Erzya]]: [[туво]] (tuvo)
 * Esperanto: {{t-|eo|porko|xs=Esperanto}}
-* Estonian: {{t-|et|siga}}
+* Estonian: {{t-|et|siga}}, {{t|et|põrsakest|p}}
 * Faroese: {{t-|fo|svín|n|xs=Faroese}}
 * Finnish: {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
