{{etyl}} fix <wassen#11363286>

--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -25,7 +25,7 @@ From {{etyl|dum|nl}} {{term|wasscen|lang=dum}}, from {{etyl|odt|nl}} *{{term||wa
 {{bottom}}
 
 ===Etymology 2===
-From {{etyl|dum|-}}, from {{etyl|odt|-nl}} {{term|wahson||to increase|lang=nl}}, from {{proto|Germanic|wahsijanan|to increase|lang=nl}}, from {{proto|Indo-European|awek-||aweg-|to increase|lang=nl}}. Cognate with {{etyl|de|-}} {{term|wachsen||to grow, expand, increase|lang=de}}, {{etyl|fy|-}} {{term|waakse||to grow, accrue|lang=fy}}, {{etyl|en|-}} {{term|wax||to grow, increase|lang=en}}. More at {{l|en|wax}}.
+From {{etyl|dum|-}}, from {{etyl|odt|nl}} {{term|wahson||to increase|lang=nl}}, from {{proto|Germanic|wahsijanan|to increase|lang=nl}}, from {{proto|Indo-European|awek-||aweg-|to increase|lang=nl}}. Cognate with {{etyl|de|-}} {{term|wachsen||to grow, expand, increase|lang=de}}, {{etyl|fy|-}} {{term|waakse||to grow, accrue|lang=fy}}, {{etyl|en|-}} {{term|wax||to grow, increase|lang=en}}. More at {{l|en|wax}}.
 
 ====Verb====
 {{nl-verb|st-7}}
